# Prototype_1

./: .bashrc  99-sub-serial.rules  tray_test.cpp
linear_control/: CMakeLists.txt  package.xml
linear_control/msg/: linear_cmd.msg  linear_status.msg
linear_control/src/: linear_control_client.py  linear_function.py
robot_test/: CMakeLists.txt  package.xml
robot_test/include/: __controller.h  tray.h  unified_controller.h  wheel.h
robot_test/launch/: robot.launch
robot_test/msg/: robot_data.msg
robot_test/src/: CMakeLists.txt  publisher.cpp  test_thread.cpp  test_thread.cpp.bak
robot_test/src/subsrc/: __.controller.cpp.swp  __controller.cpp  tray.cpp  unified_controller.cpp  unified_controller.cpp.bak  wheel copy.cpp  wheel.cpp
scara_control/: CMakeLists.txt  package.xml
scara_control/msg/: Scara_cmd.msg  Scara_cmd.msg.new  Scara_status.msg
scara_control/src/: scara_control_client1.py  scara_control_client1.py.new  scara_control_client2.py  scara_control_server.py.new  scara_function1.py  scara_function1.py.new  scara_function2.py
scara_control/src/backup_220916/: scara_control_client1.py  scara_control_client2.py  scara_control_server.py  scara_function2.py
scara_control/src/backup_220917/: scara_control_client1_final_v1.py  scara_control_client2.py  scara_control_client2_final_v1.py
